# RubiksCube

./: CMakeLists.txt  README.md  RubiksCube.cpp  RubiksCube.h  constants.h  display.cpp  display.h  index.html  main.cpp  params.json  solve.cpp  solve.h  useful.h  usefull.h
